@@ -13,6 +13,7 @@ Version 1.3.4+svn:
    * Help topics for units now have 'advances from' links
    * added experimental new transition between map and background
  * miscellaneous and bug fixes
+   * fix renames causing OOS when made after moves or recruits
    * fix a minor glitch when selecting the leftmost menu heading
    * added some extra headers for the upcomming gcc 4.3 (debian bug #417764)
    * fix bug #9398 (attacking units always above defending units)
